--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,33 +1,12 @@
-# spring.application.name=library_management_system
-
-# spring.datasource.url=jdbc:mysql://localhost:3306/library_management_system
-
-# spring.datasource.name=root
-# spring.datasource.password=""
-# # server.port=8083
-
-
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-# # spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-
+################################################################
 # Application Name
-spring.application.name=library_management_system
+spring.application.name=library_management_system  
 
 # Database Connection
 spring.datasource.url=jdbc:mysql://localhost:3306/library_management_system
-# spring.datasource.name=root
 spring.datasource.username=root
-spring.datasource.password=""  
-# Hibernate (JPA) Properties
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 
 # Server Configuration (Optional)
-# server.port=8083
+server.port=8083
 
-# JDBC Driver (Optional)
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
