--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>library_management_system</name>
 	<description>Demo project for Spring Boot</description>
-	<url/>
+	<!-- <url/>
 	<licenses>
 		<license/>
 	</licenses>
@@ -25,7 +25,7 @@
 		<developerConnection/>
 		<tag/>
 		<url/>
-	</scm>
+	</scm> -->
 	<properties>
 		<java.version>17</java.version>
 	</properties>
